--- a/Apps/Magic Cube/packageManifest.json
+++ b/Apps/Magic Cube/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.1"
+			"version": "2.0.1",
+			"primary": true
 		},
 		{
 			"id" : "e90b111f-6c45-42f5-a74f-0f65e65d3ec2",
