--- a/Apps/Remote Wellness Check/packageManifest.json
+++ b/Apps/Remote Wellness Check/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Remote%20Wellness%20Check/RWC-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "1.0.1"
+			"version": "1.0.1",
+			"primary": true
 		},
 		{
 			"id" : "b7543e4f-069c-4648-bb23-a2aac9395e36",
