--- a/Apps/Room Director/packageManifest.json
+++ b/Apps/Room Director/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Room%20Director/RD-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "1.0.2"
+			"version": "1.0.2",
+			"primary": true
 		},
 		{
 			"id" : "e739f103-b9df-4330-9f0f-ae54d6e51a2c",
