--- a/Apps/Simple Dates/packageManifest.json
+++ b/Apps/Simple Dates/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Dates/SD-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.1"
+			"version": "2.0.1",
+			"primary": true
 		},
 		{
 			"id" : "e47a5ad4-69a0-45ad-ae64-533b925632c5",
