--- a/Apps/Simple Groups/packageManifest.json
+++ b/Apps/Simple Groups/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Groups/SG-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "1.0.0"
+			"version": "1.0.0",
+			"primary": true
 		},
 		{
 			"id" : "8fc25efe-21d0-4c04-84f5-db05b0552f7c",
