--- a/Apps/Web Pinger/packageManifest.json
+++ b/Apps/Web Pinger/packageManifest.json
@@ -14,7 +14,8 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "2.0.1"
+			"version": "2.0.1",
+			"primary": true
 		},
 		{
 			"id" : "00307375-51c2-4a69-96e0-ae859dcad69e",
