--- a/Apps/Room Director/packageManifest.json
+++ b/Apps/Room Director/packageManifest.json
@@ -24,9 +24,18 @@
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Room%20Director/RD-child.groovy",
 			"required": true,
 			"oauth": false,
-			"version": "1.1.6"
+			"version": "1.1.7"
 		}
 	],
-	"drivers" : [	
+	"drivers" : [
+		{
+			"id" : "e2f6324f-ce1f-432c-86a3-d9fe848e935c",
+			"name": "Room Director Driver",
+			"namespace": "BPTWorld",
+			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Room%20Director/RD-driver.groovy",
+			"required": true,
+			"oauth": false,
+			"version": "1.0.0"
+		}
 	]
 }
