--- a/Apps/Direction Alerter/packageManifest.json
+++ b/Apps/Direction Alerter/packageManifest.json
@@ -4,7 +4,7 @@
 	"author": "BPTWorld",
 	"dateReleased": "2020-07-15",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "",
+	"communityLink": "https://community.hubitat.com/t/release-direction-alerter-get-notified-on-the-direction-something-is-moving-in/45128",
 	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
