--- a/Apps/MLB Game Day Live/packageManifest.json
+++ b/Apps/MLB Game Day Live/packageManifest.json
@@ -4,7 +4,7 @@
 	"author": "BPTWorld",
 	"dateReleased": "2020-07-21",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "",
+	"communityLink": "https://community.hubitat.com/t/release-mlb-game-day-live-follow-your-favorite-teams-game-day-live/45559",
 	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
