--- a/Apps/Event Engine/packageManifest.json
+++ b/Apps/Event Engine/packageManifest.json
@@ -4,12 +4,12 @@
 	"author": "BPTWorld",
 	"dateReleased": "2020-09-05",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "https://community.hubitat.com/t/release-event-engine-automatically-control-devices-and-events-using-multiple-triggers/49727",
+	"communityLink": "https://community.hubitat.com/t/release-event-engine-automate-your-world-with-easy-to-use-cogs-rev-up-complex-automations-with-just-a-few-clicks/49727",
 	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "cbcf97c5-6ef2-4643-bdb8-5ab8d8c593f1",
-			"name": "Event 42",
+			"name": "Event Engine",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Event%20Engine/EE-parent.groovy",
 			"required": true,
@@ -19,7 +19,7 @@
 		},
 		{
 			"id" : "f8a77601-2662-42ff-952b-e09819e9cab8",
-			"name": "Event 42 Child",
+			"name": "Event Engine Child",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Event%20Engine/EE-child.groovy",
 			"required": true,
