--- a/Apps/Device Transformer/packageManifest.json
+++ b/Apps/Device Transformer/packageManifest.json
@@ -4,7 +4,7 @@
 	"author": "BPTWorld",
 	"dateReleased": "2021-06-04",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "",
+	"communityLink": "https://community.hubitat.com/t/release-device-transformer-transform-a-device-into-a-virtual-multi-sensor-device/73846",
 	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
