--- a/Apps/Ring Keypad Companion/packageManifest.json
+++ b/Apps/Ring Keypad Companion/packageManifest.json
@@ -4,7 +4,7 @@
 	"author": "BPTWorld",
 	"dateReleased": "2021-11-14",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
-	"communityLink": "",
+	"communityLink": "https://community.hubitat.com/t/release-ring-alarm-keypad-companion-make-your-g2-keypad-do-more/83202",
 	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
